# imageboard

./: .env  .gitignore  README.md  install.sh  package.json  requirements.txt  restart.sh  start.sh  stop.sh
backend/: .gitignore  package.json  start.sh  stop.sh
backend/contracts/: generate.ts  package.json  registerRoutes.ts
backend/kind/: Dockerfile.kindnode  cluster-cfg.template.yaml  cluster-cfg.yaml
backend/nginx/: proxy_params
backend/scripts/: bootstrap.sh  bootstrap_folders.sh  create_cluster.sh  create_namespaces.sh  create_registry.sh  delete_cluster.sh  delete_namespaces.sh  delete_registry.sh  start_apps.sh  start_certmanager.sh  start_databases.sh  start_frontend.sh  start_grafana.sh  start_istio.sh  start_jaeger.sh  start_kafka.sh  start_kube_metrics.sh  start_messaging.sh  start_monitoring.sh  start_nginx.sh  start_pods.sh  start_prometheus.sh  stop_apps.sh  stop_certmanager.sh  stop_databases.sh  stop_frontend.sh  stop_grafana.sh  (+8 more)
contracts/: generate.ts  package.json  tsconfig.json
frontend/: .gitignore  deploy.yaml  eslint.config.mts  package-lock.json  package.json  todo.txt  tsconfig.json  values.yaml  vitest.config.ts
orchestrator/: cli.py  config.py  pyproject.toml  utils.py
orchestrator/core/: cluster.py  deployment.py  docker.py  helm.py  kubectl.py  lifecycle.py  log.py  networking.py  paths.py  shell.py  storage.py
orchestrator/models/: mount.py  service.py
orchestrator/post-renderer/: plugin.yaml  post_renderer.py  run.sh
orchestrator/tasks/: apps.py  cluster.py  infra.py  monitoring.py  networking.py  storage.py
(+595 files in other folders)
