[project]
name = "orchestrator"
version = "0.1.0"
dependencies = []

[project.scripts]
orchestrator = "orchestrator.cli:cli"

[tool.setuptools]
packages = [
    "orchestrator",
    "orchestrator.core",
    "orchestrator.models",
    "orchestrator.tasks"
]

[tool.setuptools.package-dir]
orchestrator = "."